# aniwheel

./: LICENSE  Pipfile  README.md  pyproject.toml
wheelsite/: manage.py
wheelsite/aniwheel/: admin.py  anilist.py  apps.py  models.py  urls.py  utility.py  views.py
wheelsite/aniwheel/migrations/: 0001_initial.py  0002_alter_watchedanimestatus_owner_and_more.py  0002_anime_cover_color_and_more.py  0003_alter_anime_title_en_alter_anime_title_romaji.py  0004_alter_anilistuser_associated_emoji_and_more.py  0005_alter_anime_title_en_alter_anime_title_romaji.py  0006_alter_anime_cover_color.py  0007_alter_anime_cover_color.py
wheelsite/aniwheel/templates/: anime.html  index.html  session_history.html
wheelsite/aniwheel/templates/account/: logout.html
wheelsite/aniwheel/templates/components/: header.html
wheelsite/aniwheel/templates/socialaccount/: login.html
wheelsite/aniwheel/templatetags/: utility_tags.py
wheelsite/static/css/: anime.css  common.css  sessions.css
wheelsite/wheelsite/: asgi.py  settings.py  urls.py  wsgi.py
