[tool.poetry]
name = "aniwheel"
version = "0.1.0"
description = ""
authors = ["Bulder"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
django-allauth = "^0.61.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
